# voxalign

./: LICENSE  README.md  pyproject.toml  setup.py
voxalign/: calc_dice_coef.py  main.py  mni_lookup.py  utils.py
voxalign.egg-info/: entry_points.txt
